// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`parsing block type 1`] = `
BlockTypeNode {
  "isHidden": false,
  "output": NamedTypeNode {
    "isHidden": false,
    "name": "Number",
    "parameters": [],
  },
}
`;

exports[`parsing complex input function type 1`] = `
FunctionTypeNode {
  "inputs": [
    NamedTypeNode {
      "isHidden": false,
      "name": "Maybe",
      "parameters": [
        NamedTypeNode {
          "isHidden": false,
          "name": "Number",
          "parameters": [],
        },
      ],
    },
    NamedTypeNode {
      "isHidden": false,
      "name": "Number",
      "parameters": [],
    },
  ],
  "isHidden": false,
  "output": UnitTypeNode {
    "isHidden": false,
  },
}
`;

exports[`parsing complex named type 1`] = `
NamedTypeNode {
  "isHidden": false,
  "name": "Maybe",
  "parameters": [
    NamedTypeNode {
      "isHidden": false,
      "name": "Number",
      "parameters": [],
    },
  ],
}
`;

exports[`parsing multi input function type 1`] = `
FunctionTypeNode {
  "inputs": [
    NamedTypeNode {
      "isHidden": false,
      "name": "Number",
      "parameters": [],
    },
    NamedTypeNode {
      "isHidden": false,
      "name": "Number",
      "parameters": [],
    },
  ],
  "isHidden": false,
  "output": UnitTypeNode {
    "isHidden": false,
  },
}
`;

exports[`parsing placeholder type 1`] = `
PlaceholderTypeNode {
  "isHidden": false,
}
`;

exports[`parsing simple named type 1`] = `
NamedTypeNode {
  "isHidden": false,
  "name": "Number",
  "parameters": [],
}
`;

exports[`parsing single input function type 1`] = `
FunctionTypeNode {
  "inputs": [
    NamedTypeNode {
      "isHidden": false,
      "name": "Number",
      "parameters": [],
    },
  ],
  "isHidden": false,
  "output": UnitTypeNode {
    "isHidden": false,
  },
}
`;

exports[`parsing unit type 1`] = `
UnitTypeNode {
  "isHidden": false,
}
`;
